<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="act_on_specified_commercial_transactions">Act on Specified Commercial Transactions</string>
    <string name="admob_app_id">ca-app-pub-7329746023076980~9689971671</string>
    <string name="app_name">pixiv</string>
    <string name="app_name_pawoo">Pawoo</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="billing_register_premium_succeed">Premium membership registration is complete.</string>
    <string name="birthday">Birthday</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browsing_history">Browsing History</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="collection">Collection</string>
    <string name="collection_do_like">Like</string>
    <string name="collection_filter">Filter</string>
    <string name="collection_tag_all">All</string>
    <string name="collection_tag_limit_message">The maximum number of tags is 10</string>
    <string name="collection_tag_uncategorized">Uncategorized</string>
    <string name="collection_tags">Collection tags</string>
    <string name="collection_tags_count">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">e7a7bf67-48e2-4cb3-a66f-6e845733c7ed</string>
    <string name="comment_delete">Delete</string>
    <string name="comment_form_placeholder">Leave a comment...</string>
    <string name="comment_post_failure">An error occurred. Please try again.</string>
    <string name="comment_post_success">Commented successfully.</string>
    <string name="comment_reply">Reply</string>
    <string name="comment_replylist_open">See replies</string>
    <string name="comment_replylist_viewmore">See previous replies</string>
    <string name="comment_workauthor">Author</string>
    <string name="common_ok">OK</string>
    <string name="connection">Connection</string>
    <string name="connection_follower">Followers</string>
    <string name="connection_following">Following</string>
    <string name="connection_mypixiv">My pixiv</string>
    <string name="copy_right">Licenses</string>
    <string name="debug_preference_key_accounts_api_client">accounts_api_client</string>
    <string name="debug_preference_key_adgeneration_grid_ad_location_id">adgeneration_grid_ad_location_id</string>
    <string name="debug_preference_key_always_show_ads">always_show_ads</string>
    <string name="debug_preference_key_always_show_inline_ads">always_show_inline_ads</string>
    <string name="debug_preference_key_always_show_overlay_ads">always_show_overlay_ads</string>
    <string name="debug_preference_key_always_show_rectangle_ads">always_show_rectangle_ads</string>
    <string name="debug_preference_key_app_api_client">app_api_client</string>
    <string name="debug_preference_key_client_development">client_development</string>
    <string name="debug_preference_key_download_kbits_per_second">download_kbits_per_second</string>
    <string name="debug_preference_key_expire_access_token">expire_access_token</string>
    <string name="debug_preference_key_live_web_socket_client">live_web_socket_client</string>
    <string name="debug_preference_key_oauth_api_client">oauth_api_client</string>
    <string name="debug_preference_key_show_rate_dialog">debug_preference_key_show_rate_dialog</string>
    <string name="debug_preference_key_shown_overlay_advertisement_sanity_level">debug_preference_key_shown_overlay_advertisement_sanity_level</string>
    <string name="debug_preference_key_sketch_api_client">sketch_api_client</string>
    <string name="debug_preference_key_start_account_setting_activity">start_account_setting_activity</string>
    <string name="debug_preference_key_start_new_from_following_local_notification_job">start_new_from_following_local_notification_job</string>
    <string name="debug_preference_key_update_access_token_expire_millis">update_access_token_expire_millis</string>
    <string name="debug_preference_key_yufulight_api_client">yufulight_api_client</string>
    <string name="feedback">Feedback</string>
    <string name="filter_follow_work_all">All</string>
    <string name="filter_follow_work_private">Private only</string>
    <string name="filter_follow_work_public">Public only</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="illust_save">Save image</string>
    <string name="logout">Logout</string>
    <string name="mute_settings">Mute settings</string>
    <string name="my_works">Your Works</string>
    <string name="new_works">Newest</string>
    <string name="novel_chapters">Chapter</string>
    <string name="novel_marker">Markers</string>
    <string name="novel_settings">Novel settings</string>
    <string name="nps_0">0</string>
    <string name="nps_1">1</string>
    <string name="nps_10">10</string>
    <string name="nps_2">2</string>
    <string name="nps_3">3</string>
    <string name="nps_4">4</string>
    <string name="nps_5">5</string>
    <string name="nps_6">6</string>
    <string name="nps_7">7</string>
    <string name="nps_8">8</string>
    <string name="nps_9">9</string>
    <string name="nps_message_1">How likely would you be to recommend this app to a friend?</string>
    <string name="nps_message_not_recommend">Not at all likely</string>
    <string name="nps_message_will_recommend">Very likely</string>
    <string name="others">Others</string>
    <string name="point_label_act_on_settlement">Notation based on the Payment Services Act</string>
    <string name="point_name">Points</string>
    <string name="preference_key_act_on_settlement">act_on_settlement</string>
    <string name="preference_key_delete_likes">delete_likes</string>
    <string name="preference_key_first_launch_time_millis">first_launch_time_millis</string>
    <string name="preference_key_first_liked">first_liked</string>
    <string name="preference_key_has_logged_in">has_logged_in</string>
    <string name="preference_key_logged_in_from_old_app">logged_in_from_old_app</string>
    <string name="preference_key_notification_notify">notification_notify</string>
    <string name="preference_key_setting_account">setting_account</string>
    <string name="preference_key_setting_logout">logout</string>
    <string name="preference_key_setting_optout">setting_optout</string>
    <string name="preference_key_setting_point">setting_point</string>
    <string name="preference_key_setting_profile">setting_profile</string>
    <string name="preference_key_setting_register_premium">setting_register_premium</string>
    <string name="preference_key_setting_workspace">setting_workspace</string>
    <string name="preference_key_shown_live_tutorial_yell">shown_live_tutorial_yell</string>
    <string name="preference_key_shown_live_tutorial_zoom">shown_live_tutorial_zoom</string>
    <string name="preference_key_support_copyright">support_copyright</string>
    <string name="preference_key_support_help">support_help</string>
    <string name="preference_key_support_law">support_law</string>
    <string name="preference_key_support_privacy_policy">support_privacy_policy</string>
    <string name="preference_key_support_terms">support_terms</string>
    <string name="preference_key_viewed_confirm_home_scroll_navigation">viewed_confirm_home_scroll_navigation</string>
    <string name="preference_key_viewed_detail_follow_navigation">viewed_detail_follow_navigation</string>
    <string name="preference_key_viewed_detail_like_navigation">viewed_detail_like_navigation</string>
    <string name="preference_key_viewed_first_like_navigation">viewed_first_like_navigation</string>
    <string name="preference_key_viewed_novel_upload_guideline_dialog">novel_upload_guideline_dialog_showed</string>
    <string name="preference_key_viewed_upload_guideline_dialog">upload_guideline_dialog_showed</string>
    <string name="preference_key_viewed_walkthrough">viewed_walkthrough</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="settings_account">Account settings</string>
    <string name="settings_notification">Notification Settings</string>
    <string name="settings_optout">Opt Out Targeted Ads</string>
    <string name="settings_profile">Profile Settings</string>
    <string name="settings_register_premium">Register for Premium</string>
    <string name="settings_workspace">Workspace</string>
    <string name="share">Share</string>
    <string name="signup_can_always_change_nickname">You can change your nickname at any time</string>
    <string name="signup_need_help">Need help?</string>
    <string name="signup_start">Get Started</string>
    <string name="signup_title">Enter nickname</string>
    <string name="support">Support</string>
    <string name="terms">Terms of use</string>
    <string name="upload_work">Submit Work</string>
    <string name="user_nickname">Nickname</string>
</resources>