<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/view_nps_first_0" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="24.0dip" android:paddingEnd="24.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/font_color_main" android:id="@id/text_nps_message" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/nps_message_1" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="120.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/linear_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:id="@id/text_nps_label_0" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_0" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_1" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_2" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_3" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_4" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_5" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_6" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_6" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_7" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_7" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_8" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_8" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_9" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_9" android:layout_weight="1.0" />
            <TextView android:gravity="center" android:id="@id/text_nps_label_10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/nps_10" android:layout_weight="1.0" />
        </LinearLayout>
        <SeekBar android:id="@id/seekbar_nps" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="10" style="@style/Widget.AppCompat.SeekBar.Discrete" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nps_message_not_recommend" />
            <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nps_message_will_recommend" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>