<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/root_layout" android:tag="layout/activity_nickname_register_0" android:layout_width="fill_parent" android:layout_height="fill_parent" app:theme="@style/PixivTheme.SignUp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:theme="@style/PixivTheme.Toolbar.Transparent" android:id="@id/tool_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/signup_title" />
    <LinearLayout android:orientation="vertical" android:id="@id/login_form_container" android:background="@drawable/bg_sign_up" android:padding="16.0dip" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="16.0sp" android:textColor="@color/renewal_font_gray" android:id="@id/nick_name_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/user_nickname" android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:enabled="false" android:textStyle="bold" android:textColor="@color/font_color_white" android:id="@id/ok_button" android:background="@drawable/button_primary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/signup_start" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/login_form_container">
        <TextView android:textColor="@android:color/white" android:gravity="center" android:id="@id/signup_can_always_change_nickname_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/signup_can_always_change_nickname" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/font_color_white" android:layout_gravity="center" android:id="@id/terms_text_view" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/terms" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/font_color_white" android:id="@id/need_help_text_view" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/signup_need_help" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>