<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/fragment_follow_filter_dialog_0" android:background="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="240.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/header" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:id="@id/close_button" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_collection_close" android:layout_centerVertical="true" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/collection_filter" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RadioGroup android:orientation="vertical" android:id="@id/restrict_radio_group" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/restrict_all_radio_button" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/filter_follow_work_all" app:buttonTint="@color/primary" />
        <androidx.appcompat.widget.AppCompatRadioButton android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/restrict_public_radio_button" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/filter_follow_work_public" app:buttonTint="@color/primary" />
        <androidx.appcompat.widget.AppCompatRadioButton android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/restrict_private_radio_button" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/filter_follow_work_private" app:buttonTint="@color/primary" />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/ok_button" android:background="@drawable/bg_follow_filter_button" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/common_ok" />
</LinearLayout>